--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -156,8 +156,9 @@
 				display: block
 				width: 100%
 				
-		.action-buttons li button
-			margin: 0 0 10px 0
+		.action-buttons li
+			float: left
+			margin: 0 5px 10px 0
 	
 	
 	
