--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -58,7 +58,6 @@
 
 					img
 						margin: -4px 7px 0 0
-
 			.wrap
 				background: #fff
 				border: 1px solid #ccc
@@ -80,6 +79,10 @@
 				i
 					margin: 0 3px 0 0
 
+					&.status-icon
+						float: right
+						margin: 7px 5px 0 0
+
 				img
 					margin: -1px 3px 0 0
 
@@ -99,6 +102,8 @@
 				float: right
 				width: 110px
 				margin: 5px 5px 0 0
+
+
 
 
 
