--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -45,6 +45,8 @@
 		width: 350px
 		z-index: 60000
 		padding: 15px
+		-moz-animation: fade-in 0.5s ease 1 normal
+		-webkit-animation: fade-in 0.5s ease 1 normal
 
 		.arrow
 			height: 24px
@@ -81,50 +83,11 @@
 
 	// Custom styles for different modals
 
-	.eze-activity-modal
-
+	.eze-activity-modal 
 		.btn-group
 			margin: 0 0 10px 0
 
-		.write-comment
-			margin: 0 0 10px 0
-
-			input
-				width: 270px
-
-
-
-
-
-
-
-
-	.eze-publish-modal
-		label.checkbox
-			margin: 0 0 10px 0
-
-		.eze-items
-			.status-icon
-				float: right
-				margin: 7px 5px 0 0
-
-
-
-
-
-
-
-
-
-	.eze-add-content-modal
-		width: 580px
-
-
-
-
 	.eze-devices-modal
-		width: 450px
-
 		.table
 			margin: 0
 
@@ -141,6 +104,14 @@
 				margin: 4px 0 0 0
 
 
+
+	.eze-publish-modal
+		label.checkbox
+			margin: 0 0 10px 0
+
+	.eze-add-content-modal
+		width: 580px
+
 	.eze-dashboard-modal
 		width: 580px
 
@@ -151,53 +122,7 @@
 
 
 
-.eze-layout-modal
 
-	.active-layout
-		border: 3px solid orange
-
-	h1
-		font: normal 22px/22px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-
-	h2
-		margin: 20px 0 10px 0
-		font: bold 14px/14px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-
-	.nav
-		margin: 0 0 5px 0
-
-	.add-new
-		margin: 0
-
-		select, .chzn-container
-			margin: 0 10px 0 0
-
-	.tab-content
-		overflow: visible
-		padding: 5px 0 0 0
-
-		ul li // Custom list with blocks
-
-			.wrap
-				height: 36px
-				line-height: 36px
-				padding-right: 80px
-
-				p
-					width: 300px
-					height: 36px
-					float: left
-					margin: 0
-					text-overflow: ellipsis
-					white-space: nowrap
-					font: normal 12px/36px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
-
-					input
-						width: 100px
-
-			.name
-				width: 150px
-				margin: 0 10px 0 0
 
 		
 
