--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -45,7 +45,7 @@
 					width: 400px
 					@include transition(left, 0.3s)
 
-				&:hover div.slide-in
+				div.slide-in.active
 					visibility: visible
 					left: 0
 
