--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -35,13 +35,13 @@
 
 	.eze-smallmodal
 		position: absolute
-		top: 50px
+		top: 20px
 		left: 87px
 		background: #fafafa
 		border-radius: 4px
 		box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.3)
 		border: 1px solid #fff
-		max-height: 600px
+		max-height: 650px
 		width: 350px
 		z-index: 60000
 		padding: 15px
@@ -114,6 +114,9 @@
 
 	.eze-dashboard-modal
 		width: 580px
+
+		form
+			margin: 0
 
 
 
