--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -18,6 +18,19 @@
 			left: 0
 			border: 1px solid #888
 
+	.block-settings
+		width: 400px
+
+		p
+			margin: 0
+
+		input[type="number"]
+			width: 40px
+			margin: 0px 5px 0 5px
+
+		select
+			width: 100px
+
 
 	// Custom generic list, with drag and drop
 	// ----------------------------------------------
