--- a/css/eze.css
+++ b/css/eze.css
@@ -50,27 +50,27 @@
     border-top: 1px solid #e4e3e3;
     -webkit-overflow-scrolling: touch;
     -webkit-transform: translateZ(0); }
+    .eze .eze-table .eze-table-content .group-header {
+      margin: 0;
+      background-color: #fafafa;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#fafafa));
+      background-image: -webkit-linear-gradient(top, white, #fafafa);
+      background-image: -moz-linear-gradient(top, white, #fafafa);
+      background-image: -ms-linear-gradient(top, white, #fafafa);
+      background-image: -o-linear-gradient(top, white, #fafafa);
+      background-image: linear-gradient(top, white, #fafafa);
+      border: 1px solid #e4e3e3;
+      padding: 5px 5px 3px 5px;
+      color: #4c4c4c;
+      font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
+      box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
+      position: relative;
+      z-index: 2; }
+      .eze .eze-table .eze-table-content .group-header:first-child {
+        border-top: 0; }
     .eze .eze-table .eze-table-content ul {
       list-style: none;
       margin: 0; }
-      .eze .eze-table .eze-table-content ul:first-child .group-header {
-        border-top: 0; }
-      .eze .eze-table .eze-table-content ul li.group-header {
-        margin: 0;
-        background-color: #fafafa;
-        background-image: -webkit-gradient(linear, left top, left bottom, from(white), to(#fafafa));
-        background-image: -webkit-linear-gradient(top, white, #fafafa);
-        background-image: -moz-linear-gradient(top, white, #fafafa);
-        background-image: -ms-linear-gradient(top, white, #fafafa);
-        background-image: -o-linear-gradient(top, white, #fafafa);
-        background-image: linear-gradient(top, white, #fafafa);
-        border: 1px solid #e4e3e3;
-        padding: 5px 5px 3px 5px;
-        color: #4c4c4c;
-        font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1);
-        position: relative;
-        z-index: 2; }
       .eze .eze-table .eze-table-content ul li.item {
         background: #fafafa;
         padding: 0 0 0 120px;
@@ -185,7 +185,10 @@
         color: white;
         font-size: 10px;
         text-decoration: none;
-        position: relative; }
+        position: relative;
+        pointer: cursor; }
+        .eze #eze-toolbar ul li a:hover {
+          background: black; }
       .eze #eze-toolbar ul li div.slide-in {
         position: absolute;
         top: 0;
