--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -66,25 +66,25 @@
             -webkit-overflow-scrolling: touch
             -webkit-transform: translateZ(0)
 
+            .group-header
+                margin: 0
+                @include gradient(#ffffff,#fafafa)
+                border: 1px solid #e4e3e3
+                padding: 5px 5px 3px 5px
+                color: #4c4c4c
+                font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+                box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1)
+                position: relative
+                z-index: 2
+
+                &:first-child
+                    border-top: 0
+
             ul
                 list-style: none
                 margin: 0
 
-                &:first-child .group-header
-                    border-top: 0
-
                 li
-                    
-                    &.group-header
-                        margin: 0
-                        @include gradient(#ffffff,#fafafa)
-                        border: 1px solid #e4e3e3
-                        padding: 5px 5px 3px 5px
-                        color: #4c4c4c
-                        font: normal 11px/11px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.1)
-                        position: relative
-                        z-index: 2
 
                     &.item
                         background: #fafafa
