--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -33,6 +33,10 @@
 					font-size: 10px
 					text-decoration: none
 					position: relative
+					pointer: cursor
+
+					&:hover
+						background: #000
 
 				// Group and quick action, slide in
 
