--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -110,6 +110,27 @@
 
 					&.edit-btn
 						right: 28px
+
+				.datetime
+					position: absolute
+					top: 2px
+					right: 95px
+					font-size: 11px
+
+					span
+						float: left
+						margin: -1px 3px 0 0
+
+
+					input
+						width: 30px
+						display: inline
+						font-size: 11px
+						padding: 2px 5px
+						margin-left: 5px
+
+						&.publish-date
+							width: 60px
 			
 			select, .chzn-container
 				float: right
