--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -37,12 +37,16 @@
 			.btn
 				float: right
 				margin: 2px 3px 0 0
+				display: none
 
 		&:nth-last-child(2) header
 			@include gradient(#ffc785, #ffb365)
 
 		&:nth-last-child(3) header
 			background: #ffd5a1
+
+		&.first header .btn, &.last header .btn
+			display: block
 
 		&.last header
 			height: 44px
