--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -88,7 +88,7 @@
 
                     &.item
                         background: #fafafa
-                        padding: 0 0 0 120px
+                        padding: 0 0 0 130px
                         margin: 0 0 1px 10px
                         border-right: 1px solid #e8e8e8
 
@@ -110,9 +110,17 @@
                                 margin: 0
 
                         .thumb
+                            margin: 0 0 0 -120px
+                            width: 110px
+                            height: 90px
                             float: left
-                            display: inline
-                            margin-left: -120px
+                            background: #eee
+
+                            img
+                                float: left
+
+                                &.class-icon
+                                    margin: 30px 0 0 39px
 
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
