--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -81,14 +81,17 @@
 						margin-top: -8px
 
 					.has-children-arrow
+						display: block
+						height: 16px
+						width: 16px
 						position: absolute
 						right: 2px
 						top: 50%
 						bottom: 50%
 						margin-top: -8px
-						background-color: #fff
 						@include transition(all, 0.1s)
 						opacity: 0.7
+						background: transparent url("../images/legacy-sprite.png") -136px -22px no-repeat
 						
 				&.active a, &.active a:hover, &.dragover a
 					background: #ffa500
