--- a/css/eze.css
+++ b/css/eze.css
@@ -50,6 +50,19 @@
     border-top: 1px solid #e4e3e3;
     -webkit-overflow-scrolling: touch;
     -webkit-transform: translateZ(0); }
+    .eze .eze-table .eze-table-content .loading-bar {
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      text-align: center;
+      border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+      position: relative;
+      left: 50%;
+      right: 50%;
+      margin: -32px 0 0 -100px;
+      width: 200px;
+      height: 20px;
+      padding: 6px 0; }
     .eze .eze-table .eze-table-content .group-header {
       margin: 0;
       background-color: #fafafa;
