--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -66,6 +66,20 @@
             -webkit-overflow-scrolling: touch
             -webkit-transform: translateZ(0)
 
+            .loading-bar
+                background: rgba(0,0,0,0.7)
+                color: #fff
+                text-align: center
+                border-top-left-radius: 4px
+                border-top-right-radius: 4px
+                position: relative
+                left: 50%
+                right: 50%
+                margin: -32px 0 0 -100px
+                width: 200px
+                height: 20px
+                padding: 6px 0
+
             .group-header
                 margin: 0
                 @include gradient(#ffffff,#fafafa)
