Disabled header animation for now, also added placeholder images for testing

--- a/css/sass/modals.sass
+++ b/css/sass/modals.sass
@@ -20,7 +20,7 @@
 			margin-right: 44px
 			max-width: 1100px
 			box-shadow: 3px 0 0 0 rgba(0,0,0,0.3)
-			-webkit-animation: fade-in 0.4s ease-in 1
+			//-webkit-animation: fade-in 0.4s ease-in 1
 			min-height: 100%
 
 	.eze-stack-content
