--- a/css/eze.css
+++ b/css/eze.css
@@ -306,7 +306,6 @@
     margin-right: 44px;
     max-width: 1100px;
     box-shadow: 3px 0 0 0 rgba(0, 0, 0, 0.3);
-    -webkit-animation: fade-in 0.4s ease-in 1;
     min-height: 100%; }
 .eze .eze-stack-content h1 {
   font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
@@ -390,10 +389,12 @@
       display: inline;
       font: normal 12px/32px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
       margin: 0; }
-      .eze .stack-item header h1 .iconwrap img {
+      .eze .stack-item header h1 .iconwrap {
         float: left;
-        margin: 8px 5px 0 10px; }
-        .eze .stack-item header h1 .iconwrap img.large {
+        width: 16px;
+        margin: -1px 5px 0 10px; }
+        .eze .stack-item header h1 .iconwrap .large {
+          margin-top: 8px;
           display: none; }
     .eze .stack-item header .btn {
       float: right;
@@ -426,19 +427,20 @@
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4); }
     .eze .stack-item.last header h1 {
       font: normal 16px/48px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
-      .eze .stack-item.last header h1 .iconwrap img.small {
-        display: none; }
-      .eze .stack-item.last header h1 .iconwrap img.large {
-        display: block; }
+      .eze .stack-item.last header h1 .iconwrap {
+        width: 32px; }
+        .eze .stack-item.last header h1 .iconwrap .small {
+          display: none; }
+        .eze .stack-item.last header h1 .iconwrap .large {
+          display: block; }
     .eze .stack-item.last header .btn {
       margin: 9px 9px 0 0;
       border: 1px solid white; }
   .eze .stack-item.move-in header {
-    -moz-animation: stack-header-move-in 0.7s ease 1 normal;
-    -webkit-animation: stack-header-move-in 0.7s ease 1 normal; }
+    -moz-animation: stack-header-move-in 0.5s ease 1 normal; }
   .eze .stack-item.move-out header {
-    -moz-animation: stack-header-move-out 0.7s ease 1 normal;
-    -webkit-animation: stack-header-move-out 0.7s ease 1 normal; }
+    -moz-animation: stack-header-move-out 0.5s ease 1 normal;
+    -webkit-animation: stack-header-move-out 0.5s ease 1 normal; }
   .eze .stack-item .eze-autosave {
     float: right;
     position: relative;
@@ -457,16 +459,17 @@
     overflow: auto;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    -moz-animation: fade-in 0.9s ease 1 normal;
-    -webkit-animation: fade-in 0.9s ease 1 normal; }
+    -moz-animation: stack-content-move-in 0.5s ease 1 normal;
+    -webkit-animation: stack-content-move-in 0.5s ease 1 normal;
+    display: none; }
     .eze .stack-item .eze-stack-content.dark {
       background: #222222;
       color: white; }
   .eze .stack-item.last .eze-stack-content {
     display: block; }
   .eze .stack-item.move-out .eze-stack-content {
-    -moz-animation: stack-content-move-out 1s ease 1 normal;
-    -webkit-animation: stack-content-move-out 1s ease 1 normal; }
+    -moz-animation: stack-content-move-out 0.5s ease 1 normal;
+    -webkit-animation: stack-content-move-out 0.5s ease 1 normal; }
 
 .eze .finder {
   background: white;
@@ -928,6 +931,13 @@
     opacity: 1; } }
 
 @-moz-keyframes fade-in {
+  0% {
+    opacity: 0; }
+
+  100% {
+    opacity: 1; } }
+
+@-webkit-keyframes stack-content-move-in {
   0% {
     opacity: 0; }
 
