--- a/css/sass/animations.sass
+++ b/css/sass/animations.sass
@@ -16,7 +16,12 @@
 		opacity: 1
 
 
-
+@-webkit-keyframes stack-content-move-in
+	0%
+		opacity: 0
+		
+	100%
+		opacity: 1
 
 @-webkit-keyframes stack-content-move-out
 	100%
