--- a/css/sass/mixins.sass
+++ b/css/sass/mixins.sass
@@ -1,5 +1,5 @@
 @mixin gradient($top, $bottom)
-    background-color: $bottom
+    background-color: $top
     background-image: -webkit-gradient(linear, left top, left bottom, from($top), to($bottom))
     background-image: -webkit-linear-gradient(top, $top, $bottom)
     background-image: -moz-linear-gradient(top, $top, $bottom)
