--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -103,21 +103,11 @@
 		.eze-document
 			background-position: -128px 0
 
-		.eze-status
-			height: 8px
-			width: 8px
-			border-radius: 8px
+		.status-icon
 			border: 1px solid #000
 			position: absolute
-			top: 3px
-			left: 37px
-
-			&.published
-				background: #82ea43
-			&.changed
-				background: yellow
-			&.new
-				background: red
+			top: 5px
+			left: 38px
 
 		.eze-search
 			background-position: -192px 0
