--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -93,18 +93,11 @@
 					background: url(../images/scrubber.png) center center no-repeat
 					cursor: move
 
-				i
-					margin: 0 3px 0 0
-
-					&.status-icon
-						float: right
-						margin: 7px 5px 0 0
-
 				img
 					margin: -1px 5px 0 5px
 
 				input[type="checkbox"]
-					margin: 0 3px
+					margin: 2px 0 0 10px
 
 				input[type="text"]
 					height: 22px
@@ -138,6 +131,9 @@
 					border-top-right-radius: 4px
 					border-bottom-right-radius: 4px
 					@include gradient(#ffffff,#f5f5f5)
+
+					.status-icon
+						margin: 11px 10px 0 5px
 
 					.btn
 						background: transparent
