--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -104,6 +104,7 @@
 			left: 0
 			bottom: 0
 			overflow: auto
+			-webkit-overflow-scrolling: touch
 			-moz-box-sizing: border-box
 			box-sizing: border-box
 			-moz-animation: stack-content-move-in 0.5s ease 1 normal
